; ModuleID = '/home/carl/AnghaBench/esp-idf/components/heap/extr_heap_caps.c_heap_caps_get_allocated_size.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/heap/extr_heap_caps.c_heap_caps_get_allocated_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @heap_caps_get_allocated_size(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call %struct.TYPE_3__* @find_containing_heap(i8* %5)
  store %struct.TYPE_3__* %6, %struct.TYPE_3__** %3, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i8*, i8** %2, align 8
  %11 = call i64 @multi_heap_get_allocated_size(i32 %9, i8* %10)
  store i64 %11, i64* %4, align 8
  %12 = load i64, i64* %4, align 8
  ret i64 %12
}

declare dso_local %struct.TYPE_3__* @find_containing_heap(i8*) #1

declare dso_local i64 @multi_heap_get_allocated_size(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
